<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageButton
        android:id="@+id/main_go_to_add_deadline"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/add_deadline_button_cont_descr"
        android:onClick="goToAddDeadline"
        app:layout_constraintEnd_toStartOf="@+id/main_open_settings_but"
        app:layout_constraintStart_toEndOf="@+id/goToCalendarButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/deadlineListView"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/main_open_settings_but"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/main_open_settings_but_content_descr"
        android:onClick="launchSettingsActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/deadlineListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_go_to_add_deadline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/goToCalendarButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/calendar_button_text"
        android:onClick="openCalendar"
        app:layout_constraintBottom_toTopOf="@+id/deadlineListView"
        app:layout_constraintEnd_toStartOf="@+id/main_go_to_add_deadline"
        app:layout_constraintStart_toEndOf="@+id/filter"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_calendar"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/goToQrCodeReader"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_button"
        android:onClick="openCodeScanner"
        android:text="@string/qr_code_scanner_button_text"
        app:icon="@drawable/ic_qr_scanner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineListView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />

    <ListView
        android:id="@+id/deadlineListView"
        android:layout_width="367dp"
        android:layout_height="676dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_open_settings_but" />

    <Button
        android:id="@+id/groupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_button"
        android:onClick="goToGroups"
        android:text="@string/groups"
        app:icon="@drawable/ic_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineListView"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/filter"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/deadlineListView"
        app:layout_constraintEnd_toStartOf="@+id/goToCalendarButton"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>